// Copyright 2015 - Serhstourism, S.A
//
// Author Jaume Ar√∫s - jaumearus@gmail.com
//
// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

package collector;

option java_package = "me.bpulse.domain.proto.collector";
option optimize_for = SPEED;

message Value{
	required string name = 1;
	repeated string values = 2;
}

message Pulse{
	required string typeId = 1;
	required string instanceId = 2;
	required int64 time = 3;
	repeated Value values = 4;
}

message PulsesRQ{
	required string version = 1;
	repeated Pulse pulse = 2;
}